# crypto_projects

./: CMakeLists.txt  README.md
cli/: main.cpp
crypt_math_lib/: .gitignore  README.md
include/: crypt_math.hpp
src/: crypt_math.cpp
